=======
HISTORY
=======

1.1rc5 (unreleased)
-------------------

- Removed z3c.json dependancy, changed to simplejson or built-in json
  [kingel]

- Register import/export handlers as zcml statements
  [kingel]

- Set javascript files as cachable and mergable.
  [robgietema]

- Removed getInfoFromBrain method in JSONFolderListing and JSONSearch.
  [robgietema]

- Added support for comment nodes in Generic Setup.
  [robgietema]

- Changed hard coded css imports in dialogs to the generated plone.css.
  [robgietema]

- Changed condition for Javascript includes.
  [robgietema]

- Fix for static image sizes.
  [robgietema]

- Added richTextWidget to list of valid classes for a rich text widget to
  support non-AT widgets.
  [robgietema]

- Renamed configlet and moved to Plone section.
  [robgietema]

- Removed browsercheck from isTinyMCEEnabled method.
  [robgietema]

- Removed default values from interfaces/utility.py since they are already set
  by the Generic Setup profile.
  [robgietema]

- Removed .mo files from version control.
  [robgietema]

- Added translations for simpleterms in controlpanel.
  [robgietema]

- Get anchors from primary field and not from the 'text' field.
  [robgietema]

- Fixed misspelled breadcrumbs.
  [robgietema]

- Fix TinyMCEOutput parser to correctly recognise CDATA sections. TinyMCE puts
  the contents of <script/> tags in CDATA sections.
  [optilude]

- Add french translation.
  [toutpt]

- Use AT mutator when setting title and description when uploading a file,
  otherwise this doesn't work on blobs.
  [optilude]

1.1rc4 (2009-09-04)
-------------------

- Added hiding upload button when you don't have permission to upload.
  [robgietema]

- Fixed jumping when up one level is hidden.
  [robgietema]

- Add allow_upload marker to results.
  [optilude]

- Support iframe attributes.
  [optilude]

- Fixed parent url when object is not folderish.
  [robgietema]

- Added tests for adapters.
  [robgietema]
